2007-08-21  Junichi Uekawa  <dancer@debian.org>

	* parameter.c: config file parsing improved by patch from Jan-Marek Glogowski 

2007-06-27  Junichi Uekawa  <dancer@debian.org>

	* cowdancer.c (initialize_functions): work around glibc bug: dlvsym failure
	isn't setting dlerror.
	(load_ilist): close fd used for mmap after use.

2007-06-21  Junichi Uekawa  <dancer@debian.org>

	* cowdancer.c (initialize_functions): try to load chown@@GLIBC_2.1
	if it exists.
	It is translated to lchown on i386, if I try to load the unversioned symbol.

2007-06-19  Junichi Uekawa  <dancer@debian.org>

	* parameter.c (load_config_file): support BUILDPLACE
	configuration.
	(parse_parameter): make it an error that BUILDPLACE is not
	set. Default is set in pbuilderrc.
	(parse_parameter): process --distribution command-line option
	properly.

	* qemubuilder.8: 
	* cowbuilder.8: update documentation for dumpconfig.

	* qemubuilder.c (cpbuilder_help): 
	* cowbuilder.c (cpbuilder_help): 
	* parameter.c (parse_parameter): add dumpconfig command.

2007-06-17  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.8: add examples

	* qemubuilder.c (qemu_arch_qemu): change x86_64/i386 logic.

2007-06-09  Junichi Uekawa  <dancer@debian.org>

	* tests/014_ilistdump_test.sh: change deprecated sort +2 to -k 2

	* tests/014_ilistdump_test.c: fix testsuite

	* Makefile: fix rules to include ilistcreate.

	* cowbuilder.c: ignore ./home

	* cow-shell.c:
	* ilistcreate.c (ilistcreate): move function, and reorganize code.

2007-06-06  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c: clean up code and generally initialize variables.

	* Makefile (install): qemubuilder installed to sbin, since it
	needs root privilege

	* qemubuilder.c (copy_dscfile): support signed .dsc file.

	* parameter.h: 
	* parameter.c: new files, moved common code from cowbuilder/qemubuilder

2007-06-05  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (load_config_file): 