@@ -1,14 +1,15 @@
 cowdancer (0.38) UNRELEASED; urgency=low
 
-  [ Junichi Uekawa ]
-  * document that i386/amd64 cross-arch building is not supported using
-    cowbuilder.
-
   [ Jan-Marek Glogowski ] 
   * Don't clean the environment when invoking dumpconfig 
   * Better error handling when loading config
 
- -- Junichi Uekawa <dancer@debian.org>  Tue, 21 Aug 2007 08:20:56 +0900
+  [ Junichi Uekawa ]
+  * document that i386/amd64 cross-arch building is not supported using
+    cowbuilder.
+  * add aptitude into chroot for pbuilder-satisfydepends-aptitude.
+
+ -- Junichi Uekawa <dancer@debian.org>  Wed, 29 Aug 2007 18:27:29 +0900
 
 cowdancer (0.37) unstable; urgency=low
 
